--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -1,5 +1,6 @@
 set -g prefix C-a
-bind j select-pane -D
-bind k select-pane -U
-bind h select-pane -L
-bind l select-pane -R
+bind j      select-pane -D
+bind k      select-pane -U
+bind h      select-pane -L
+bind l      select-pane -R
+bind Tab    select-pane -t :.+
