--- a/config/i3/config
+++ b/config/i3/config
@@ -141,14 +141,17 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
-# background default
-exec xsetroot -solid "#111111"
+# background color if all else fails
+exec --no-startup-id xsetroot -solid "#111111"
 
-# pretty background
-exec feh --bg-fill $HOME/.backgrounds/astronaut_on_fire.jpg
+# default background
+exec --no-startup-id feh --bg-fill $HOME/.backgrounds/astronaut_on_fire.jpg
+
+# random background
+exec --no-startup-id feh --bg-max $(find $HOME/.backgrounds/|shuf -n1)
 
 # stop nautilus from spawning a desktop window
-exec gsettings set org.gnome.desktop.background show-desktop-icons false
+exec --no-startup-id gsettings set org.gnome.desktop.background show-desktop-icons false
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
