--- a/config/i3/config
+++ b/config/i3/config
@@ -150,7 +150,7 @@ exec --no-startup-id feh --bg-fill $HOME/.backgrounds/astronaut_on_fire.jpg
 # random background
 exec --no-startup-id feh --bg-max $(find $HOME/.backgrounds/|shuf -n1)
 
-bindsym $mod+~ exec --no-startup-id feh --bg-max $(find $HOME/.backgrounds/|shuf -n1)
+bindsym $mod+grave exec --no-startup-id feh --bg-max $(find $HOME/.backgrounds/|shuf -n1)
 
 # stop nautilus from spawning a desktop window
 exec --no-startup-id gsettings set org.gnome.desktop.background show-desktop-icons false
