bugfix some cross-platform i3 stuff

--- a/config/i3/config
+++ b/config/i3/config
@@ -18,8 +18,8 @@ font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec gnome-terminal
-exec export TERM=gnome-teminal
+bindsym $mod+Return exec i3-sensible-terminal
+# exec export TERM=gnome-teminal
 
 # kill focused window
 bindsym $mod+Shift+Q kill
@@ -102,11 +102,11 @@ bindsym $mod+Shift+parenleft move container to workspace 9
 bindsym $mod+Shift+parenright move container to workspace 10
 
 # volume keys mapped to alsamixer
-bindsym XF86AudioRaiseVolume exec amixer -q set Master 2dB+ unmute
-bindsym XF86AudioLowerVolume exec amixer -q set Master 2dB- unmute
+bindsym XF86AudioRaiseVolume exec amixer -q set Master 4%+ unmute
+bindsym XF86AudioLowerVolume exec amixer -q set Master 4%- unmute
 bindsym XF86AudioMute exec amixer -q set Master toggle
-bindsym $mod+equal exec amixer -q set Master 2dB+ unmute
-bindsym $mod+minus exec amixer -q set Master 2dB- unmute
+bindsym $mod+equal exec amixer -q set Master 4%+ unmute
+bindsym $mod+minus exec amixer -q set Master 4%- unmute
 
 # reload the configuration file
 bindsym $mod+Shift+C reload
