switch from firefox to chromium for default browser

--- a/config/i3/config
+++ b/config/i3/config
@@ -28,7 +28,8 @@ bindsym $mod+Shift+Q kill
 # start dmenu (a program launcher)
 bindsym $mod+d exec dmenu_run
 
-bindsym $mod+bar exec firefox
+# start a web browser
+bindsym $mod+bar exec chromium
 
 # change focus
 bindsym $mod+h focus left
