--- a/config/i3/config
+++ b/config/i3/config
@@ -155,6 +155,7 @@ exec --no-startup-id feh --bg-fill $HOME/.backgrounds/astronaut_on_fire.jpg
 exec --no-startup-id feh --bg-max $(find $HOME/.backgrounds/|shuf -n1)
 
 bindsym $mod+grave exec --no-startup-id feh --bg-max $(find $HOME/.backgrounds/|shuf -n1)
+bindsym $mod+Shift+grave exec $HOME/bin/lock
 
 # stop nautilus from spawning a desktop window
 exec --no-startup-id gsettings set org.gnome.desktop.background show-desktop-icons false
