--- a/config/i3/config
+++ b/config/i3/config
@@ -113,6 +113,10 @@ bindsym XF86AudioMute exec amixer -q set Master toggle
 bindsym $mod+equal exec amixer -q set Master 4%+ unmute
 bindsym $mod+minus exec amixer -q set Master 4%- unmute
 
+# Google chrome window fix
+for_window [class="Google-chrome" title="Google Chrome"] border none
+for_window [class="Chromium" title="Google Chrome"] border none
+
 # reload the configuration file
 bindsym $mod+Shift+C reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
