mess with xterm

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -4,3 +4,4 @@ bind k      select-pane -U
 bind h      select-pane -L
 bind l      select-pane -R
 bind Tab    select-pane -t :.+
+set -g default-terminal screen-256color
