--- a/config/i3/config
+++ b/config/i3/config
@@ -168,6 +168,9 @@ bindsym $mod+Shift+grave exec $HOME/bin/lock
 # stop nautilus from spawning a desktop window
 exec --no-startup-id gsettings set org.gnome.desktop.background show-desktop-icons false
 
+# start pulseaudio
+exec start-pulseaudio-x11
+
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
