--- a/config/i3/config
+++ b/config/i3/config
@@ -178,6 +178,9 @@ exec --no-startup-id gsettings set org.gnome.desktop.background show-desktop-ico
 # start pulseaudio
 exec start-pulseaudio-x11
 
+# start skype
+# exec skype
+
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
