--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -1,4 +1,6 @@
 set -g prefix C-b
+set -g default-terminal "screen-256color"
+source '/usr/lib/python3.5/site-packages/powerline/bindings/tmux/powerline.conf'
 bind j      select-pane -D
 bind k      select-pane -U
 bind h      select-pane -L
