--- a/tmux.stow/.tmux.conf
+++ b/tmux.stow/.tmux.conf
@@ -1,5 +1,5 @@
-# use C-b as the prefix key
-set -g prefix C-b
+# use C-\ as the prefix key
+set -g prefix 'C-\'
 
 # specify 256 color terminal internally for compatibility
 set -g default-terminal "screen-256color"
@@ -14,6 +14,9 @@ bind Tab    select-pane -t :.+
 # Enable mouse mode
 set -g mouse on
 
+# escape delay is crap
+set -g escape-time 10
+
 # don't rename windows automatically
 set-option -g allow-rename off
 
@@ -25,7 +28,7 @@ bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
 bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
 bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
 bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
-bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+# bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
 ######################
 ### DESIGN CHANGES ###
