--- a/pkg/git/stow/.config/git/config
+++ b/pkg/git/stow/.config/git/config
@@ -2,18 +2,21 @@
     name = Axel Magnuson
     email = axelmagn@gmail.com
 
+[core]
+    editor = vim
+    pager = less -R
+
 [color]
     diff = auto
     status = auto
     branch = auto
     ui = auto
 
+[commit]
+    verbose = true
+
 [push]
     default = simple
-
-[core]
-    editor = vim
-    pager = less -R
 
 [alias]
     diverges = !bash -c 'diff -u <(git rev-list --first-parent "${1}") <(git rev-list --first-parent "${2:-HEAD}") | sed -ne \"s/^ //p\" | head -1' -
